--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="canonical" href="https://yourwebsite.com/">
-<script src="script.js"></script>
+<script src="script1.js"></script>
 
     <!-- These need real values -->
 <script>gtag('config', 'G-YOUR-ACTUAL-ID');</script>
