--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Vaidik Anusthan & Puja - Professional Vedic Services | Shastri Krishna Prasad Khanal</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="hi.css">
+        <link rel="stylesheet" href="style.css">
 
         <meta name="description" content="Professional Vedic puja services and astrology consultations by Shastri Krishna Prasad Khanal. Book online pujas, horoscope readings, and spiritual guidance in Siliguri, West Bengal.">
         <meta name="keywords" content="vedic puja booking, online astrology consultation, professional priest services, kundali matching, horoscope reading, spiritual guidance, siliguri astrologer">
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <meta name="google-site-verification" content="your-verification-code">
-        <link rel="preload" href="banner-2.png" as="image">
+        <link rel="preload" href="banner4.png" as="image">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="canonical" href="https://yourwebsite.com/">
