--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vaidik Anusthan & Puja - Professional Vedic Services | Shastri Krishna Prasad Khanal</title>
+       
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <meta name="description" content="Professional Vedic puja services and astrology consultations by Shastri Krishna Prasad Khanal. Book online pujas, horoscope readings, and spiritual guidance in Siliguri, West Bengal.">
@@ -14,6 +14,18 @@
         <meta property="og:description" content="Professional Vedic puja services and astrology consultations by certified Vedic scholar Shastri Krishna Prasad Khanal.">
         <meta property="og:image" content="banner.png">
         <meta property="og:type" content="website">        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <!-- SEO Meta Tags -->
+<title> Yagya-puja.com|Online Puja Booking | Astrology Consultation | Book Pandit</title>
+<meta name="description" content="Book online puja services with trusted pandits and get accurate astrology consultation. Kundli matching, horoscope reading, and all Hindu rituals available. yagya,puja,yagya-puja .com">
+<meta name="keywords" content="online puja booking,yagya-puja.com, yagya ,puja , book pandit online, astrology consultation, kundli matching, rudrabhishek, ganesh puja, grah pravesh, horoscope reading">
+<meta name="author" content="Divine Puja Services,yagya-puja.com , yagya ,puja">
+
+<!-- Mobile Responsive -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+      
         <!-- Add these missing important meta tags -->
   <meta name="theme-color" content="#007bff">
   <meta name="apple-mobile-web-app-capable" content="yes">
