--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       
+        <!-- Favicon -->
+<link rel="icon" type="image/png" href="logo-png.png">
+
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <meta name="description" content="Professional Vedic puja services and astrology consultations by Shastri Krishna Prasad Khanal. Book online pujas, horoscope readings, and spiritual guidance in Siliguri, West Bengal.">
