--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
-<link rel="icon" type="image/png" href="logo-png.png">
+<link rel="icon" type="image/png" href="logo.png">
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
