--- a/frontend/index.html
+++ b/frontend/index.html
@@ -150,6 +150,15 @@
           
         })();
         </script>
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F36W54VFZ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F36W54VFZ8');
+</script>
     </head>
     <body>
       <div id="loading-screen">
