--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,15 @@
         </script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-YOUR-ACTUAL-ID"></script>
 
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F36W54VFZ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F36W54VFZ8');
+</script>
         <!-- Schema Markup for SEO -->
         <script type="application/ld+json">
         {
